--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,3 +10,207 @@ html {
 body {
     font-size: 1.6rem;
 }
+
+/* Common */
+a {
+    text-decoration: none;
+}
+
+.btn {
+    min-width: 205px;
+    line-height: 60px;
+    color: #fff;
+    border: 1px solid #2e80ce;
+    font-size: 1.8rem;
+    text-align: center;
+    font-weight: 400;
+    border-radius: 999px;
+    background: #2e80ce;
+    display: inline-block;
+}
+
+.btn:hover {
+    opacity: 0.9;
+}
+
+/* Header */
+.header {
+    padding-top: 30px;
+    min-height: 100vh;
+    background: #10375c;
+}
+
+.container {
+    width: 1170px;
+    max-width: calc(100% - 48px);
+    margin: 0 auto;
+}
+
+.header .logo {
+    display: inline-flex;
+    font-size: 1rem;
+    position: relative;
+}
+
+.header .logo__circle::before,
+.header .logo__circle::after {
+    content: "";
+    display: inline-block;
+    border-radius: 50%;
+}
+
+.header .logo__circle::before {
+    width: 3em;
+    height: 3em;
+    background: #2e80ce;
+}
+
+.header .logo__circle::after {
+    position: absolute;
+    top: 1.1em;
+    left: 1.1em;
+    width: 1.6em;
+    height: 1.6em;
+    background: #fff;
+}
+
+.header .logo__brand {
+    margin-left: 0.6em;
+    color: #fff;
+    display: inline-block;
+    text-align: right;
+}
+
+.header .logo__text:first-child {
+    color: #fff;
+    font-size: 1.8em;
+    font-weight: 400;
+}
+
+.header .logo__text:last-child {
+    font-weight: 300;
+    font-size: 1.2em;
+}
+
+.header-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar__list {
+    display: flex;
+}
+
+.navbar__link {
+    color: #c9d2da;
+    font-weight: 300;
+    padding: 4px 21px;
+}
+
+.navbar__link.navbar__link--active {
+    color: #fff;
+    text-shadow: 1px 0 0 currentColor;
+}
+
+.navbar__link:hover {
+    color: #fff;
+    text-shadow: 1px 0 0 currentColor;
+}
+
+.navbar__link--active::before {
+    position: relative;
+    left: -8px;
+    top: -3px;
+    content: "";
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    background: #fff;
+    border-radius: 50%;
+}
+
+.header-action {
+    display: flex;
+    align-items: center;
+}
+
+.header-action__login {
+    margin-right: 28px;
+    padding: 8px 0;
+    color: #c9d2da;
+    font-weight: 300;
+}
+
+.btn.header-action__sign-up {
+    font-size: 1.6rem;
+    min-width: 104px;
+    line-height: 44px;
+}
+
+.hero {
+    display: flex;
+    /* align-items: center; */
+    margin-top: 76px;
+}
+
+.hero__content {
+    width: 44%;
+    flex-shrink: 0;
+}
+
+.hero__heading {
+    color: #fff;
+    font-size: 7rem;
+    font-weight: 600;
+    line-height: 1.14;
+    letter-spacing: -1.4px;
+}
+
+.hero__desc {
+    margin-top: 22px;
+    color: #c9d2da;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 1.66;
+}
+
+.hero__row {
+    margin-top: 38px;
+    display: flex;
+    align-items: center;
+}
+
+.hero__phone {
+    color: #fff;
+    margin-left: 38px;
+    font-size: 1.8rem;
+    line-height: 1.66;
+}
+
+.hero__media {
+    flex-grow: 1;
+}
+
+.hero__images {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.hero__img {
+    width: 330px;
+    height: 540px;
+    border-radius: 6px;
+    object-fit: cover;
+}
+
+.hero__img:first-child {
+    position: relative;
+    margin-right: -6px;
+}
+
+.hero__img:last-child {
+    width: 210px;
+    height: 410px;
+}
