--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,7 +4,7 @@
 
 html {
     font-size: 62.5%;
-    font-family: Sora, 'sans-serif';
+    font-family: 'Sora', 'sans-serif';
 }
 
 body {
@@ -30,7 +30,11 @@ a {
     display: inline-block;
 }
 
-.heading.lv2 {
+.btn:hover {
+    opacity: 0.9;
+}
+
+.section-heading {
     color: #10375c;
     font-size: 5rem;
     font-weight: 600;
@@ -47,8 +51,32 @@ a {
     line-height: 1.66;
 }
 
-.btn:hover {
-    opacity: 0.9;
+.section-cta {
+    display: flex;
+    align-content: center;
+    column-gap: 18px;
+}
+
+.section__btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 36px;
+    width: 36px;
+    border: 1px solid #575f66;
+    border-radius: 50%;
+    background: transparent;
+}
+
+.section__btn:hover {
+    color: #fff;
+    background: #2e80ce;
+    cursor: pointer;
+    border-color: transparent;
+}
+
+.section__btn-right {
+    rotate: 180deg;
 }
 
 /* Header */
@@ -161,6 +189,7 @@ a {
 }
 
 .btn.header-action__sign-up {
+    margin-top: 0;
     font-size: 1.6rem;
     min-width: 104px;
     line-height: 44px;
@@ -385,4 +414,216 @@ a {
     left: 238px;
     width: 332px;
     height: 370px;
+}
+
+.member {
+    padding: 170px 0;
+}
+
+.member__header {
+    text-align: center;
+}
+
+.member__cta {
+    margin-top: 38px;
+    justify-content: center;
+}
+
+.member__list {
+    display: grid;
+    margin-top: 70px;
+    column-gap: 34px;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.member-item:hover {
+    transform: scale(1.1);
+    transition: 0.25s;
+}
+
+.member-item__bg {
+    position: relative;
+    min-width: 270px;
+    height: 318px;
+    border-radius: 6px;
+    background: #eaf6ff;
+}
+
+.member-item__avt {
+    position: absolute;
+    width: 260px;
+    height: 305px;
+    bottom: 0;
+    object-fit: cover;
+}
+
+.member-item__content {
+    margin-top: 12px;
+    text-align: center;
+}
+
+.member-item__name {
+    color: #10375c;
+    text-align: center;
+    font-weight: 600;
+    line-height: 1.75;
+}
+
+.member-item__desc {
+    color: #575f66;
+    font-size: 1.4rem;
+    font-weight: 300;
+    line-height: 1.85;
+}
+
+/* Install */
+.install__wrapper {
+    display: flex;
+    align-items: center;
+    padding: 0 70px;
+    border-radius: 4px;
+    background: #2e80ce;
+}
+
+.install__phone {
+    flex-grow: 1;
+    margin-top: -95px;
+    width: 284px;
+    height: 522px;
+    object-fit: cover;
+    display: block;
+}
+
+.install__content {
+    max-width: 586px;
+    margin-left: 160px;
+}
+
+.install__desc,
+.install__heading {
+    color: #fff !important;
+}
+
+.install__heading {
+    width: 489px;
+}
+
+.install__desc {
+    width: 586px;
+}
+
+.install__row {
+    margin-top: 38px;
+    display: flex;
+    gap: 28px;
+}
+
+.install__btn {
+    background: transparent;
+    border: none;
+    outline: none;
+}
+
+.install__gg {
+    width: 135px;
+    height: 40px;
+}
+
+.install__app {
+    width: 120px;
+    height: 40px;
+}
+
+/* News */
+.news {
+    padding: 85px 0;
+    margin: 85px 0;
+}
+
+.news__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.news__content {
+    flex-shrink: 0;
+}
+
+.news__heading {
+    max-width: 470px;
+}
+
+.news__more {
+    color: #10375c;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.55;
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
+
+.news__cta {
+    margin-top: 28px;
+}
+
+.news__list {
+    display: flex;
+    column-gap: 30px;
+    max-width: 570px;
+}
+
+.news-item {
+    flex: 1;
+    overflow: hidden;
+    border: 1px solid #e8ebee;
+    border-top: none;
+    background: #fff;
+    border-radius: 12px;
+}
+
+.news-item:hover {
+    border-radius: 12px;
+    background: #fff;
+    box-shadow: 0px 18px 50px 0px rgba(0, 0, 0, 0.05);
+}
+
+.news-item__thumb {
+    display: block;
+    width: 100%;
+    width: 270px;
+    height: 172px;
+    object-fit: cover;
+    border-radius: 12px 12px 0px 0px;
+}
+
+.news-item__body {
+    padding: 18px 20px;
+}
+
+.news-item__heading a {
+    color: #10375c;
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1.62;
+}
+
+.news-item__desc {
+    width: 226px;
+    padding: 12px 0;
+    color: #575f66;
+    font-size: 1.4rem;
+    font-weight: 300;
+    line-height: 1.71;
+}
+
+.news-item__more {
+    display: inline-block;
+    color: #10375c;
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+
+.news-item__more:hover {
+    color: #2e80ce;
 }
