--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,6 +16,14 @@ a {
     text-decoration: none;
 }
 
+input,
+button,
+select,
+textarea {
+    font-family: inherit;
+    font-size: inherit;
+}
+
 .btn {
     margin-top: 38px;
     min-width: 205px;
@@ -28,6 +36,7 @@ a {
     border-radius: 999px;
     background: #2e80ce;
     display: inline-block;
+    cursor: pointer;
 }
 
 .btn:hover {
@@ -42,8 +51,8 @@ a {
     letter-spacing: -1px;
 }
 
-.desc {
-    margin-top: 18px;
+.section-desc {
+    padding-top: 18px;
     width: 468px;
     color: #575f66;
     font-size: 1.8rem;
@@ -79,6 +88,56 @@ a {
     rotate: 180deg;
 }
 
+.logo {
+    display: inline-flex;
+    font-size: 1rem;
+    position: relative;
+}
+
+.logo__brand {
+    font-family: Sora, sans-serif;
+}
+
+.logo__circle::before,
+.logo__circle::after {
+    content: '';
+    display: inline-block;
+    border-radius: 50%;
+}
+
+.logo__circle::before {
+    width: 3em;
+    height: 3em;
+    background: #2e80ce;
+}
+
+.logo__circle::after {
+    position: absolute;
+    top: 1.1em;
+    left: 1.1em;
+    width: 1.6em;
+    height: 1.6em;
+    background: #fff;
+}
+
+.logo__brand {
+    margin-left: 0.6em;
+    color: #fff;
+    display: inline-block;
+    text-align: right;
+}
+
+.logo__text:first-child {
+    color: #fff;
+    font-size: 1.8em;
+    font-weight: 400;
+}
+
+.logo__text:last-child {
+    font-weight: 300;
+    font-size: 1.2em;
+}
+
 /* Header */
 .header {
     padding-top: 30px;
@@ -90,52 +149,6 @@ a {
     width: 1170px;
     max-width: calc(100% - 48px);
     margin: 0 auto;
-}
-
-.header .logo {
-    display: inline-flex;
-    font-size: 1rem;
-    position: relative;
-}
-
-.header .logo__circle::before,
-.header .logo__circle::after {
-    content: '';
-    display: inline-block;
-    border-radius: 50%;
-}
-
-.header .logo__circle::before {
-    width: 3em;
-    height: 3em;
-    background: #2e80ce;
-}
-
-.header .logo__circle::after {
-    position: absolute;
-    top: 1.1em;
-    left: 1.1em;
-    width: 1.6em;
-    height: 1.6em;
-    background: #fff;
-}
-
-.header .logo__brand {
-    margin-left: 0.6em;
-    color: #fff;
-    display: inline-block;
-    text-align: right;
-}
-
-.header .logo__text:first-child {
-    color: #fff;
-    font-size: 1.8em;
-    font-weight: 400;
-}
-
-.header .logo__text:last-child {
-    font-weight: 300;
-    font-size: 1.2em;
 }
 
 .header-top {
@@ -658,8 +671,122 @@ a {
 }
 
 .appointment__desc {
-    max-width: 617px;
+    width: 620px;
     font-size: 1.6rem;
-    margin: 18px auto 0;
+    margin: 0 auto;
+}
+
+/* Footer */
+.footer {
+    font-family: 'Open Sans', 'sans-serif';
+    padding: 100px 0 42px;
+    background: #10375c;
+}
+
+.footer__row {
+    display: grid;
+    grid-template-columns: 1fr 0.4fr 0.4fr 1fr;
+    column-gap: 78px;
+}
+
+.footer__desc {
+    margin-top: 21px;
+    color: #a9b3bb;
+    font-size: 1.6rem;
+    font-weight: 400;
     line-height: 1.75;
+}
+
+.footer__heading {
+    color: #fff;
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1.75;
+    margin-bottom: 20px;
+}
+
+.footer__link {
+    color: #a9b3bb;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.85;
+}
+
+.footer__list li {
+    margin-bottom: 10px;
+}
+
+.footer__list li:last-child {
+    margin-bottom: 28px;
+}
+
+.footer__social {
+    display: flex;
+    column-gap: 10px;
+}
+
+.footer__social-btn {
+    color: #2e80ce;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background: #fff;
+    margin-bottom: 28px;
+}
+
+.footer__social-btn:hover {
+    background: #2e80ce;
+    color: #fff;
+}
+
+.footer-form {
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    column-gap: 12px;
+}
+
+.footer-form__input {
+    padding: 10px;
+    width: 212px;
+    height: 46px;
+    border-radius: 4px;
+    border: 1px solid #406181;
+    background: transparent;
+    outline: none;
+}
+
+.footer-form__input::placeholder {
+    color: #9ca8b1;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.85;
+}
+
+.footer-form__submit {
+    margin-top: 0;
+    min-width: 108px;
+    height: 46px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+
+.footer__copyright {
+    border-top: 1px solid #406181;
+}
+
+.footer__copyright-text {
+    margin-top: 28px;
+    color: #aab3ba;
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.85;
 }
